@@ -7,16 +7,20 @@ import com.yummy.naraka.client.util.NarakaRenderUtils;
 import com.yummy.naraka.world.entity.LightTailEntity;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
+import net.minecraft.client.renderer.LightTexture;
 import net.minecraft.client.renderer.SubmitNodeCollector;
 import net.minecraft.client.renderer.entity.EntityRenderer;
 import net.minecraft.client.renderer.entity.EntityRendererProvider;
 import net.minecraft.client.renderer.rendertype.RenderTypes;
 import net.minecraft.client.renderer.state.CameraRenderState;
+import net.minecraft.client.renderer.texture.OverlayTexture;
 import net.minecraft.util.ARGB;
 import net.minecraft.util.Mth;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
 import org.joml.Vector3f;
+
+import java.util.stream.Collectors;
 
 @Environment(EnvType.CLIENT)
 public abstract class LightTailEntityRenderer<T extends LightTailEntity, S extends LightTailEntityRenderState> extends EntityRenderer<T, S> {
@@ -27,13 +31,12 @@ public abstract class LightTailEntityRenderer<T extends LightTailEntity, S exten
     @Override
     public void extractRenderState(T entity, S renderState, float partialTick) {
         super.extractRenderState(entity, renderState, partialTick);
-        renderState.tailPositions = entity.getTailPositions()
+        renderState.tailPositions = entity.getTailPositions(partialTick)
                 .stream()
-                .map(position -> position.subtract(entity.position()))
-                .map(NarakaRenderUtils::vector3f)
-                .toList();
-        renderState.partialTranslation = entity.position()
-                .subtract(entity.getPosition(partialTick));
+                .map(position -> position.subtract(entity.getPosition(partialTick)))
+                .map(Vec3::toVector3f)
+                .collect(Collectors.toList());
+        renderState.tailPositions.addFirst(new Vector3f());
         renderState.tailColor = entity.getTailColor();
         renderState.tailWidth = 0.15f;
 
@@ -54,7 +57,7 @@ public abstract class LightTailEntityRenderer<T extends LightTailEntity, S exten
         AABB boundingBox = super.getBoundingBoxForCulling(entity);
         double maxX = boundingBox.maxX, maxY = boundingBox.maxY, maxZ = boundingBox.maxZ;
         double minX = boundingBox.minX, minY = boundingBox.minY, minZ = boundingBox.minZ;
-        for (Vec3 position : entity.getTailPositions()) {
+        for (Vec3 position : entity.getTailPositions(1)) {
             maxX = Math.max(position.x, maxX);
             maxY = Math.max(position.y, maxY);
             maxZ = Math.max(position.z, maxZ);
@@ -68,13 +71,12 @@ public abstract class LightTailEntityRenderer<T extends LightTailEntity, S exten
     @Override
     public void submit(S entityRenderState, PoseStack poseStack, SubmitNodeCollector submitNodeCollector, CameraRenderState cameraRenderState) {
         super.submit(entityRenderState, poseStack, submitNodeCollector, cameraRenderState);
-        submitTail(entityRenderState, poseStack, submitNodeCollector, entityRenderState.partialTranslation);
+        submitTail(entityRenderState, poseStack, submitNodeCollector);
     }
 
-    protected void submitTail(S renderState, PoseStack poseStack, SubmitNodeCollector submitNodeCollector, Vec3 translation) {
+    protected void submitTail(S renderState, PoseStack poseStack, SubmitNodeCollector submitNodeCollector) {
         poseStack.pushPose();
         poseStack.translate(0, 0.25, 0);
-        poseStack.translate(translation);
         submitNodeCollector.submitCustomGeometry(poseStack, RenderTypes.lightning(), (pose, vertexConsumer) -> {
             float partSize = 1 / (float) renderState.tailPositions.size();
             for (int index = 0; index < renderState.tailPositions.size() - 1; index++) {
@@ -98,6 +100,9 @@ public abstract class LightTailEntityRenderer<T extends LightTailEntity, S exten
     }
 
     protected void renderTailPart(S renderState, PoseStack.Pose pose, VertexConsumer vertexConsumer, Vector3f from, Vector3f to, float index, float size, int color) {
-        NarakaRenderUtils.renderTailPart(pose, vertexConsumer, from, to, renderState.tailWidth, index, size, color);
+        NarakaRenderUtils.renderFlatImage(pose, vertexConsumer,
+                NarakaRenderUtils.createVertices(from, to, renderState.tailWidth, NarakaRenderUtils::modifyY), index, index, size, size,
+                LightTexture.FULL_BRIGHT, OverlayTexture.NO_OVERLAY, color
+        );
     }
 }
